CSS fixes - fix nav styling: should wrap on mobile - main container: remove extra margin - layout: dont limit height - layout: reduce whitespace

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -5,11 +5,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .main {
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
+  padding: 0 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
